# claude-usage-indicator

./: .gitignore  LICENSE  README.en.md  README.md  claude_usage_indicator.py  install-dev.sh  install.sh  migration.json  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/workflows/: lint.yml  notify-release.yml  rust-dev-release.yml  rust-release.yml
cui/: __init__.py  __main__.py  api.py  cli.py  config.py  credentials.py  migrate.py  model.py  poller.py  tray.py
notes/: 2.13.0.en.md  2.13.0.zh.md  README.md
packaging/: claude-usage-indicator-watchdog.service  claude-usage-indicator-watchdog.timer  claude-usage-indicator.service  migration-watchdog.sh
rust/: Cargo.toml  MIGRATION_PLAN.md
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/cui/: Cargo.toml  build.rs
rust/cui/src/: api.rs  cli.rs  config.rs  creds.rs  kwallet.rs  main.rs  notifier.rs  ntfy.rs  poller.rs  selfupdate.rs  tray.rs  ui.rs  uninstall.rs
rust/ksni/: .cargo_vcs_info.json  Cargo.toml
rust/ksni/src/: dbus_interface.rs  lib.rs  service.rs
rust/packaging/: claude-usage-indicator-dev.service  claude-usage-indicator-rust-dev.service
tests/: test_cli.py  test_core.py
