[package]
name = "cui"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.9.1"
anyhow = "1.0.102"
cbc = "0.2.1"
cui-core = { path = "../core" }
futures-util = "0.3" # zbus 信号流 .next()（通知动作按钮监听）
glob = "0.3.3"
hmac = "0.13.0"
ksni = { path = "../ksni" }   # fork：加了 XAyatanaLabel（顶栏内联标签，无 GTK）
notify-rust = "4.17.0"
pbkdf2 = "0.13.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
serde = "1.0"
serde_json = "1.0.150"
zbus = { version = "5.16", default-features = false, features = ["tokio"] } # KWallet 直查（KDE 凭证回退）
sha1 = "0.11.0"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
wreq = "5.3.0"
wreq-util = "2.2.6"
